--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: YLの客栈🍄
+title: 🍁YLの客栈🍁
 subtitle: "(๑˃́ꇴ˂̀๑)"
 description: ""
 keywords:
