--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
 skip_render:
-  - [_post/0.Global/*]
+  - "_posts/0.Global/**"
 
 # Writing
 new_post_name: :title.md # File name of new posts
